Fully fix compare alignment

--- a/src/app/compare/Compare.m.scss
+++ b/src/app/compare/Compare.m.scss
@@ -26,7 +26,7 @@
 }
 
 .spacer {
-  height: 48px;
+  height: var(--compare-item-height, 48px);
 }
 
 .organizerLink {
